; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ui/extr_ui_lib.c_UI_dup_verify_string.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ui/extr_ui_lib.c_UI_dup_verify_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UI_F_UI_DUP_VERIFY_STRING = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4
@UIT_VERIFY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @UI_dup_verify_string(i32* %0, i8* %1, i32 %2, i8* %3, i32 %4, i32 %5, i8* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  store i32* %0, i32** %9, align 8
  store i8* %1, i8** %10, align 8
  store i32 %2, i32* %11, align 4
  store i8* %3, i8** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i8* %6, i8** %15, align 8
  store i8* null, i8** %16, align 8
  %17 = load i8*, i8** %10, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %29

19:                                               ; preds = %7
  %20 = load i8*, i8** %10, align 8
  %21 = call i8* @OPENSSL_strdup(i8* %20)
  store i8* %21, i8** %16, align 8
  %22 = load i8*, i8** %16, align 8
  %23 = icmp eq i8* %22, null
  br i1 %23, label %24, label %28

24:                                               ; preds = %19
  %25 = load i32, i32* @UI_F_UI_DUP_VERIFY_STRING, align 4
  %26 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %27 = call i32 @UIerr(i32 %25, i32 %26)
  store i32 -1, i32* %8, align 4
  br label %39

28:                                               ; preds = %19
  br label %29

29:                                               ; preds = %28, %7
  %30 = load i32*, i32** %9, align 8
  %31 = load i8*, i8** %16, align 8
  %32 = load i32, i32* @UIT_VERIFY, align 4
  %33 = load i32, i32* %11, align 4
  %34 = load i8*, i8** %12, align 8
  %35 = load i32, i32* %13, align 4
  %36 = load i32, i32* %14, align 4
  %37 = load i8*, i8** %15, align 8
  %38 = call i32 @general_allocate_string(i32* %30, i8* %31, i32 1, i32 %32, i32 %33, i8* %34, i32 %35, i32 %36, i8* %37)
  store i32 %38, i32* %8, align 4
  br label %39

39:                                               ; preds = %29, %24
  %40 = load i32, i32* %8, align 4
  ret i32 %40
}

declare dso_local i8* @OPENSSL_strdup(i8*) #1

declare dso_local i32 @UIerr(i32, i32) #1

declare dso_local i32 @general_allocate_string(i32*, i8*, i32, i32, i32, i8*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
